Working implementation still some bugs
1. App not refresshing properly based on next refresh time.
2. Want to control the app using keyboard

--- a/TripleJPlayer/Info.plist
+++ b/TripleJPlayer/Info.plist
@@ -11,5 +11,13 @@
 	<array>
 		<dict/>
 	</array>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.yourcompany.TripleJPlayer</string>
+	<key>CFBundleName</key>
+	<string>Triple J Player</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This app uses Bluetooth to stream audio to Bluetooth devices</string>
 </dict>
 </plist>
